--- a/Monkey/pom.xml
+++ b/Monkey/pom.xml
@@ -42,6 +42,18 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>com.ly</groupId>
+      <artifactId>PD-Proxy</artifactId>
+      <version>${app.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
     
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
